2011-07-16  smeghead <smeghead7@gmail.com>

	* added form changed check. if form edited, show confirm dialog.

2011-07-17  smeghead <smeghead7@gmail.com>

	* 1.5.01 released.

2011-07-16  smeghead <smeghead7@gmail.com>

	* mattn gave me a patch that fix build error of windows version. thanks!
	* added libsqlite3-0.dll for windows dependences libraries.
	* added dependences library in INSTALL document.

2011-06-26  smeghead <smeghead7@gmail.com>

	* 1.5.00 released.

2011-06-25  smeghead <smeghead7@gmail.com>

	* renewal design.

2011-06-13  smeghead <smeghead7@gmail.com>

	* 1.4.08 released.

2011-06-13  smeghead <smeghead7@gmail.com>

	* prepare release.

2011-06-09  smeghead <smeghead7@gmail.com>

	* fixed to search tickats in more than 10 sub projects bug. again.

2011-06-08  smeghead <smeghead7@gmail.com>

	* 1.4.07 released.

2011-06-08  smeghead <smeghead7@gmail.com>

	* fixed to search tickats in more than 10 sub projects bug.

2011-05-19  smeghead <smeghead7@gmail.com>

	* 1.4.06 released.

2011-05-15  smeghead <smeghead7@gmail.com>

	* changed to initialize gettext.js.

2011-05-15  smeghead <smeghead7@gmail.com>

	* 1.4.05 released.

2011-05-14  smeghead <smeghead7@gmail.com>

	* use javascript gettext.

2011-05-12  smeghead <smeghead7@gmail.com>

	* 1.4.04 released.

2011-05-12  smeghead <smeghead7@gmail.com>

	* added irc notify sample hook script.
	* fixed to failed export project setting.

2011-02-22  smeghead <smeghead7@gmail.com>

	* starbug1 official site url changed. www.starbug1.com -> starbug1.com

2011-02-18  smeghead <smeghead7@gmail.com>

	* on javascript, retrieve message, use cache if exists.

2011-02-16  smeghead <smeghead7@gmail.com>

	* on javascript, memoize message. retrieve Asynchronous.

2011-01-01  smeghead <smeghead7@gmail.com>

	* 1.4.03 released.

2011-01-01  smeghead <smeghead7@gmail.com>

	* help to copy link and title text in ticket page.
	* prepare release.

2010-12-22  smeghead <smeghead7@gmail.com>
